# eikthyrnir

./: Cargo.toml  README.md  install.sh
chance/: Cargo.toml
chance/src/: main.rs
chaotica/: Cargo.toml
chaotica/src/: error.rs  main.rs
chaotica/src/subcommands/: combine.rs  mod.rs  relabel.rs
eikthyrnir/: Cargo.toml
eikthyrnir-chaotica/src/: main.rs
eikthyrnir-chaotica/src/subcommands/: combine.rs  mod.rs
eikthyrnir-open/: Cargo.toml
eikthyrnir-open/src/: error.rs  main.rs
eikthyrnir-web/: Cargo.toml
eikthyrnir-web/src/: error.rs  main.rs
eikthyrnir/src/: lib.rs  main.rs
open/: Cargo.toml
open/src/: main.rs
src/: error.rs  main.rs  utils.rs
src/modules/: git.rs  mod.rs  open.rs
temp/: Cargo.toml
temp/src/: error.rs  main.rs
temp/src/lib/: duration.rs  exclude.rs  io.rs  mod.rs
temp/src/subcommands/: delete.rs  list.rs  mod.rs
test_files/: test1.chaos  test2.chaos
web/: Cargo.toml
web/src/: main.rs
