[package]
name = "eikthyrnir"
version = "0.1.0"
authors = ["SitiSchu <admin@sitischu.com>"]
edition = "2018"
description = "Random utilities stuffed into a single binary"

[[bin]]
path = "src/main.rs"
name = "e"

[dependencies]
structopt = "0.3"
git2 = "0.12"
regex = "1.3"
colored = "1.9"
open = "1.3"
